--- a/Tyuiu.GulahmedovTE.Sprint3.Task5.V17/Tyuiu.GulahmedovTE.Sprint3.Task5.V17.csproj
+++ b/Tyuiu.GulahmedovTE.Sprint3.Task5.V17/Tyuiu.GulahmedovTE.Sprint3.Task5.V17.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Tyuiu.GulahmedovTE.Sprint3.Task5.V14.Lib\Tyuiu.GulahmedovTE.Sprint3.Task5.V14.Lib.csproj" />
+    <ProjectReference Include="..\Tyuiu.GulahmedovTE.Sprint3.Task5.V17.Lib\Tyuiu.GulahmedovTE.Sprint3.Task5.V17.Lib.csproj" />
   </ItemGroup>
 
 </Project>
